✨feat(langchain): Introduce ChatModelName enum and update model name handling in services
Author: Zheyun Zhao <jp2022213670@qmul.ac.uk>